   specially crafted core files in /etc/logrotate.d or similar could then lead
   to arbitrary code execution with root privileges.
   Now core files do not get written for these kinds of programs, in accordance
   with the intention of core(5).
   Thanks to Sander Bos for discovering this issue!
   (CVE-2015-1324, LP: #1452239)
 * apportcheckresume: Fix "occured" typo, thanks Matthew Paul Thomas.
   (LP: #1448636)
 * signal_crashes test: Fix test_crash_setuid_* to look at whether
   suid_dumpable was enabled.

2.17.2 (2015-04-16)
-------------------
 * SECURITY UPDATE: Disable crash forwarding to containers. The previous fix in
   2.17.1 was not sufficient against all attack scenarios. By binding to
   specially crafted sockes, a normal user program could forge arbitrary
   entries in /proc/net/unix. We cannot currently rely on a kernel-side
   solution for this; this feature will be re-enabled once it gets re-done to
   be secure. (LP: #1444518)
 * do-release: Force UTC timezone for upstream changelog generation.
 * apport-kde: Fix crash when showing byte array values. Thanks Jonathan
   Riddell. (LP: #1443659)
 * Really create a better duplicate signature for recoverable problems, using
   ExecutablePath. Thanks Brian Murray. (LP: #1316763)

2.17.1 (2015-04-14)
-------------------
 * SECURITY UPDATE: Fix root privilege escalation through crash forwarding to
   containers.
   Version 2.13 introduced forwarding a crash to a container's apport. By
   crafting a specific file system structure, entering it as a namespace
   ("container"), and crashing something in it, a local user could access
   arbitrary files on the host system with root privileges.
   Thanks to Stéphane Graber for discovering and fixing this!
   (CVE-2015-1318, LP: #1438758)
 * apport-kde tests: Fix imports to make tests work again.
 * Fix UnicodeDecodeError on parsing non-ASCII environment variables.
 * apport: use the proper pid when calling apport in another PID namespace.