@@ -12,6 +12,15 @@ detailed list of changes, please see ChangeLog.
    with the intention of core(5).
    Thanks to Sander Bos for discovering this issue!
    (CVE-2015-1324, LP: #1452239)
+ * SECURITY UPDATE: When writing a core dump file for a crashed packaged
+   program, don't close and reopen the .crash report file but just rewind and
+   re-read it. This prevents the user from modifying the .crash report file
+   while "apport" is running to inject data and creating crafted core
+   dump files. In conjunction with the above vulnerability of writing core
+   dump files to arbitrary directories this could be exploited to gain root
+   privileges.
+   Thanks to Philip Pettersson for discovering this issue!
+   (CVE-2015-1325, LP: #1453900)
  * apportcheckresume: Fix "occured" typo, thanks Matthew Paul Thomas.
    (LP: #1448636)
  * signal_crashes test: Fix test_crash_setuid_* to look at whether
